--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: 'ubuntu-18.04'
-    environment: 'spike.default'
+    environment: 'openshift-sandbox.stefan-bergstein-stage'
     variables:
     - group: Release
     strategy:
@@ -63,14 +63,14 @@ stages:
               action: createSecret
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: 'Container Registry Connection'
-              kubernetesServiceConnection: 'Kubernetes Cluster Connection'
-              namespace: 'default'            
+              kubernetesServiceConnection: 'openshift-sandbox-stefan-bergstein-stage-1621761087176'
+              namespace: 'stefan-bergstein-stage'            
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
-              kubernetesServiceConnection: 'Kubernetes Cluster Connection'
-              namespace: 'default'
+              kubernetesServiceConnection: 'openshift-sandbox-stefan-bergstein-stage-1621761087176'
+              namespace: 'stefan-bergstein-stage'
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
                 $(Pipeline.Workspace)/manifests/service.yml
