--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: tailspinspacegame.azurecr.io/web
+          image: tailspinspacegame11760.azurecr.io/web
           ports:
           - containerPort: 8080
 ---
@@ -34,6 +34,6 @@ spec:
     spec:
       containers:
         - name: leaderboard
-          image: tailspinspacegame.azurecr.io/leaderboard
+          image: tailspinspacegame11760.azurecr.io/leaderboard
           ports:
           - containerPort: 8080
