--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: 'ubuntu-18.04'
-    environment: 'openshift-sandbox.stefan-bergstein-stage'
+    environment: 'openshift-sandbox-stage.stefan-bergstein-stage'
     variables:
     - group: Release
     strategy:
@@ -63,13 +63,13 @@ stages:
               action: createSecret
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: 'Container Registry Connection'
-              kubernetesServiceConnection: 'openshift-sandbox-stefan-bergstein-stage-1621761087176'
+              kubernetesServiceConnection: 'openshift-sandbox-stage-stefan-bergstein-stage-1621770433872'
               namespace: 'stefan-bergstein-stage'            
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
-              kubernetesServiceConnection: 'openshift-sandbox-stefan-bergstein-stage-1621761087176'
+              kubernetesServiceConnection: 'openshift-sandbox-stage-stefan-bergstein-stage-1621770433872'
               namespace: 'stefan-bergstein-stage'
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
