--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,13 +63,13 @@ stages:
               action: createSecret
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: 'Container Registry Connection'
-              kubernetesServiceConnection: 'Kubernetes Cluster Connection'
+              kubernetesServiceConnection: 'OpenShiftKube-SpaceGameStage-Connection'
               namespace: 'spacegame-stage'            
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
-              kubernetesServiceConnection: 'Kubernetes Cluster Connection'
+              kubernetesServiceConnection: 'OpenShiftKube-SpaceGameStage-Connection'
               namespace: 'spacegame-stage'
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
