--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: 'ubuntu-18.04'
-    environment: 'spike.spacegame-stage'
+    environment: 'OpenShift.spacegame-stage'
     variables:
     - group: Release
     strategy:
