--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,13 +64,13 @@ stages:
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: 'Container Registry Connection'
               kubernetesServiceConnection: 'Kubernetes Cluster Connection'
-              namespace: 'default'            
+              namespace: 'azure-devops'            
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
               kubernetesServiceConnection: 'Kubernetes Cluster Connection'
-              namespace: 'default'
+              namespace: 'azure-devops'
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
                 $(Pipeline.Workspace)/manifests/service.yml
